--- a/.github/workflows/test_hello.yml
+++ b/.github/workflows/test_hello.yml
@@ -7,7 +7,7 @@ jobs:
   hello-test-python-versions:
     strategy:
       matrix:
-        python-version: ['3.7', '3.8']
+        python-version: ['3.6', '3.7', '3.8', '3.13']
     runs-on: ubuntu-22.04
     steps:
     
